One of the color was replaced

--- a/scss/default/_variables.scss
+++ b/scss/default/_variables.scss
@@ -38,7 +38,7 @@ $primary: #4abdac;
 $secondary: #fc4a1a;
 $light: #dfdce3;
 $dark: #2c2c2d;
-$accent: #f76733;
+$accent: #f7B733;
 $white: #ffffff;
 $black: #000000;
 
