--- a/scss/theme/_typography.scss
+++ b/scss/theme/_typography.scss
@@ -9,7 +9,7 @@ h2, .swtk-h2 {
   font-family: $font-primary;
   font-size: $font-large;
   font-weight: bold;
-  color: $secondary;
+  color: $primary;
 }
 
 h3, .swtk-h3 {
@@ -23,7 +23,7 @@ h4, .swtk-h4 {
   font-family: $font-primary;
   font-size: $font-big;
   font-weight: bold;
-  color: $secondary;
+  color: $primary;
 }
 
 h5, .swtk-h5 {
@@ -37,7 +37,7 @@ h6, .swtk-h6 {
   font-family: $font-primary;
   font-size: $font-small;
   font-weight: bold;
-  color: $secondary;
+  color: $primary;
 }
 
 p, li {
