Icons replaced, icons position fixed

--- a/scss/theme/_posts.scss
+++ b/scss/theme/_posts.scss
@@ -57,7 +57,7 @@ article.swtk-post-index {
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
-      align-items: flex-start;
+      align-items: center;
 
       margin-bottom: $padding / 2;
 
@@ -107,7 +107,7 @@ article.swtk-post-index {
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
-      align-items: flex-start;
+      align-items: center;
 
       margin-bottom: $padding / 2;
 
@@ -191,7 +191,7 @@ article.swtk-post-single {
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
-      align-items: flex-start;
+      align-items: center;
 
       margin-bottom: $padding / 2;
 
@@ -232,7 +232,7 @@ article.swtk-post-single {
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
-      align-items: flex-start;
+      align-items: center;
 
       margin-bottom: $padding / 2;
 
@@ -331,7 +331,7 @@ article.swtk-post-sticky {
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
-      align-items: flex-start;
+      align-items: center;
 
       margin-bottom: $padding / 2;
 
@@ -381,7 +381,7 @@ article.swtk-post-sticky {
       display: flex;
       flex-direction: row;
       justify-content: flex-start;
-      align-items: flex-start;
+      align-items: center;
 
       margin-bottom: $padding / 2;
 
